--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>alantucker.github.io</title>
 </head>
 <body>
+    <h1>alantucker.github.io</h1>
     <p>Coming Soon...</p>
 </body>
 </html>
